# thinking-loop

./: LICENSE  README.md  pyproject.toml
benchmarks/: gsm8k_subset.yml  run.py
examples/: math_demo.py  reasoning_demo.py
tests/: test_adjudicator.py  test_budget.py  test_confidence.py  test_strategies.py
thinking_loop/: __init__.py  adjudicator.py  budget.py  confidence.py  core.py  llm.py  trace.py
thinking_loop/strategies/: __init__.py  base.py  cot.py  decomposition.py  direct.py  self_consistency.py  tot_lite.py
